[package]
name = "oplog"
version = "0.2.0"
authors = ["Paul Mucur <mudge@mudge.name>"]
description = "Library for iterating over a MongoDB replica set oplog."
documentation = "http://mudge.name/oplog"
repository = "https://github.com/mudge/oplog"
readme = "README.md"
keywords = ["mongodb", "mongo", "oplog"]
license = "MIT"

[dependencies]
bson = "^0.3.0"
mongodb = "^0.1.8"
chrono = "^0.2.0"
